--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -929,7 +929,7 @@ The wide difference of costs for the recovery of phosphorus from different flows
 				&                                                                                                                                                         & Incineration                                                                     & 8.9                                    & LEACHPHOS                                                                                & Calcium phosphate                                                                 & 78                                                                                    & 5.1                                  & 9                                                            &  [2,3,4]  \\
 				&                                                                                                                                                         & Incineration                                                                     & 8.9                                    & RecoPhos                                                                                 & Mineral                                                                           & 87                                                                                    & 2.5                                  & 9                                                            & [2,3,4]   \\
 				&                                                                                                                                                         & Incineration                                                                     & 8.9                                    & Thermophos                                                                               & P4                                                                                & 81                                                                                    & 2.7                                  & 9                                                            &  [2,3,4]  \\ \cmidrule(l){2-10}
-				& Poultry litter                                                                                                                                          & -                                                                               & -                                     & Quick wash                                                                               & Solid precipitate                                                                 & 70                                                                                    & 4.4                                  & 3   &    [5]      \\ \cmidrule(l){2-10}
+				& Poultry litter                                                                                                                                          & -                                                                               & -                                     & Quick wash                                                                               & Solid precipitate                                                                 & 70                                                                                    & 4.4                                  & 4-6   &    [5]      \\ \cmidrule(l){2-10}
 				& \multirow{4}{*}{\begin{tabular}[c]{@{}c@{}}Slaughterhouse waste, \\ liquid phase\\ (14\% of total slaughterhouse P)\end{tabular}}                    & -                                                                               & -                                     & Multiform                                                                                & Struvite                                                                          & 84                                                                                    & $22.6 + 1.10 \cdot 10^6 \cdot \lceil 1.05 \cdot 10^{-4} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                 & 9                                                           &  [6]  \\
 				&                                                                                                                                                         & -                                                                               & -                                     & Ostara Pearl 500                                                                             & Struvite                                                                          & 58                                                                                    & $15.60 + 2.30 \cdot 10^6 \cdot \lceil 8.70 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                 & 9                                                            &     [6]     \\
 				&                                                                                                                                                         & -                                                                               & -                                     & Ostara Pearl 2K                                                                             & Struvite                                                                          & 58                                                                                    & $15.60 + 3.10 \cdot 10^6 \cdot \lceil 2.26 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                 & 9                                                            &    [6]      \\
