--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -69,8 +69,8 @@
 	\author[Waterloo]{Jorge A. Garcia Hernandez}
 	\author[McGill]{Samantha Gangapersad}
 	\author[McGill]{Tian Zhao}
-	\author[Waterloo,TheWaterInstitute]{Roy Brouwer}
 	\author[McGill]{Sidney Omelon}
+	\author[Waterloo,TheWaterInstitute]{Roy Brouwer}
 	\author[ULaval,CentrEau]{Céline Vaneeckhaute}
 		
 	\address[ULaval]{BioEngine - Research Team on Green Process Engineering and Biorefineries, Chemical Engineering Department, Université Laval, 1065 Ave. de la Médecine, Québec, QC, G1V 0A6, Canada}
@@ -82,7 +82,7 @@
 	\begin{abstract}
 %		The dual dimension of the anthropogenic use of phosphorus, i.e., its key role in the food production system and the negative environmental impacts associated with the phosphorus used in intensive agricultural techniques, has been stated by the United Nations Environment Assembly. In addition, phosphorus is a non-renewable material which reserves are concentrated in a few number of regions, making global supply chains vulnerable to regional events and conflicts. As a consequence, the recovery and recycling of phosphorus is not just a desirable but also a necessary approach to assure a sustainable, reliable, and sovereign food production system. In this work we map the phosphorus flows through the economic sectors of the Canadian province of Ontario, and phosphorus recovery and recycling opportunities are identified. These mainly belong to the agricultural sector, including manure (30.5 kt/year) and slaughterhouse waste (3.7 kt/year), although significant amounts of P are also found in food and organic waste, including municipal wastewater (6.4 kt/year). Different scenarios are studied to determine the amount of phosphorus that could be recovered within the province considering according with the technology readiness level of different phosphorus recovery processes, as well as the costs associated with phosphorus recovery {\color{red}Add some more numbers here}. Finally, we discuss the implications that would be derived from implementing active phosphorus recovery and recycling approaches regarding phosphorus supply and use in Ontario. 
 		
-		Phosphorus is a key non-renewable element used in multiple economic activities, and notably for food production. However, sustained releases over time have led to nutrient pollution and eutrophication of ecosystems. In this work, we map the phosphorus flows through Ontario’s economic sectors, and we identify the potential for phosphorus recovery and recycling. These mainly target flows associated with food production and processing, including wastewater and food waste. Up to 86\% of phosphorus imports for food production could be covered by recycled phosphorus, with an average recovery cost of 36 EUR/kg. This is lower than the estimated economic losses derived from the release of phosphorus into the environment, but significantly higher than fossil-based commercial phosphorus products. Additionally, there exist a wide variation on phosphorus recovery costs from different streams, which suggest the need of exploring cooperative approaches for effective phosphorus recovery at regional scale.
+		Phosphorus is a key non-renewable element used in multiple economic activities, and notably for food production. However, sustained releases over time have led to nutrient pollution and eutrophication of ecosystems. This paper maps the phosphorus flows through Ontario’s economic sectors and identifies potential opportunities for phosphorus recovery and recycling. Phosphorus flows associated with food production and processing, including wastewater and food waste are the main targets. Up to 86\% of phosphorus imports for food production could be covered by recycled phosphorus, with an average recovery cost of 36 EUR/kg of phosphorus. This cost is lower than the estimated economic losses caused by the release of a kilogram of phosphorus into the environment, but is significantly higher than the per kg cost of fossil-based commercial phosphorus products. Additionally, phosphorus recovery costs vary widely for different waste streams, suggesting the need of exploring cooperative approaches for effective phosphorus recovery at regional scale.
 	\end{abstract}
 %	
 	\begin{keyword}
@@ -192,9 +192,12 @@ Regarding greenhouse crops, the data available was limited, resulting in an esti
 %(i.e., tomatoes, peppers, and cucumbers)119
 and phosphorus releases from greenhouse irrigation systems also known as greenhouse nutrient feedwater (GNF) systems \citep{GNFOntario}. The phosphorus uptake by greenhouse crops is determined by multiplying the production of greenhouse crops \citep{HorticulturalOntario} by the phosphorus content of each vegetable type \citep{USDAHandbook}. The phosphorus releases from the GNF systems was estimated based on the average concentration of phosphorus in GNF outlet streams for  Ontario, 33.6 mg/L \citep{GreenhouseReleases}, and the total water discharges from GNF systems, assuming that the water discharges are equivalent to 25\% of the total water applied in greenhouses, which corresponds with the worst-case scenario of no water recirculation in the GNF systems \citep{GNFOntario}. The average water consumption in greenhouses in Ontario was assumed to be 1,000 L/m\textsuperscript{2}/year \citep{GrowingVeggiesOntario}. We have also estimated the phosphorus releases from the seasonal workers live in households in the vicinity of the greenhouses that may use septic systems, considering that the seasonal labour force in Ontario greenhouses is estimated to be 6,699 workers \citep{GreenhouseWorkers}, and an average phosphorus load rate of f 0.0156 kg P/person/week from septic systems \citep{oldfield2020estimation}.
 
-Phosphorus in aquaculture are mainly due to supply of feed as part of fish feed the grow of trouts, part of which is uptake by fishes, while the rest of phosphorus is released into aquatic ecosystems since aquaculture effluents are directly discharged to the environment \citep{OntarioAquaculture}. The amount phosphorus uptakes by fishes
+%Phosphorus in aquaculture are mainly due to supply of feed as part of fish feed the grow of trouts, part of which is uptake by fishes, while the rest of phosphorus is released into aquatic ecosystems since aquaculture effluents are directly discharged to the environment
+Phosphorus enters aquaculture systems as fish feed, primarily in the growth of trouts. A fraction of this phosphorus goes to the fish and the remainder is discharged into aquatic ecosystems as aquaculture effluents
+\citep{OntarioAquaculture}. 
+The total phosphorus in fish produced in Ontario
 %supplied to aquaculture as fish feed is taken from, while the phosphorus uptakes by fishes are 
-is calculated multiplying the fish production \citep{StatisticsCanadaAquaculture}, by their phosphorus content \citep{CanadianNutrientFile}, while the phosphorus content in the aquaculture waste effluents of Ontario is estimated to be 10 kg of phosphorus per ton of fish produced \citep{bureau2003chemical}. The sum of phosphorus uptakes by fishes and phosphorus in aquaculture waste effluents result in the phosphorus supplied to aquaculture as fish feed.
+is calculated multiplying the fish production \citep{StatisticsCanadaAquaculture} by their phosphorus content \citep{CanadianNutrientFile}, while the phosphorus content in the aquaculture waste effluents of Ontario is estimated to be 10 kg of phosphorus per ton of fish produced \citep{bureau2003chemical}. The phosphorus in Ontario fish feed that is supplied to aquaculture, is estimated to be the sum of the phosphorus in the fish produced and the phosphorus in aquaculture effluent.
 
 \subsubsection{Industrial sector}
 Phosphorus flows through imports, production, exports and waste for the food, steel, and forestry industries of Ontario were mapped.
@@ -206,13 +209,23 @@ are estimated scaling each type of food
 traded in Canada \citep{TradeDataOnlineCanada}
 with the population of Ontario \citep{PopulationCanada}.
 %and then subtracting the amount of each type of food produced within Ontario.
-The phosphorus contained in each type of imported and exported food is estimated multiplying the amount of ech type of traded food by its phosphorus content \citep{CanadianNutrientFile}. Phosphorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing, from the production of food raw materials to consumption \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
+The phosphorus contained in each type of imported and exported food is estimated multiplying the amount of each type of traded food by its phosphorus content \citep{CanadianNutrientFile}. Phosphorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing, from the production of food raw materials to consumption \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
 
-The steel industry is the first non-food sector in terms of phosphorus use. The main phosphorus inflows of steel manufacturing are associated with the use of iron ore, coal, and coke, while the main outflow of phosphorus is within slag, which remove most of the impurities from steel, including phosphorus. It must be noted that, although some minor amounts of phophosphorus can be desired in steel for making anti-corrosion surface coatings, it is largely considered an impurity in the steel manufacturing process. Phosphorus in these flows is estimated multiplyting their average phosphorus content (0.06\% P in iron ore, 0.05\% P for coal, 0.4\% P in slag, and 0.01\% in steel) \citep{yokoyama2007separation} by the steel production capacity of the facilities located in Ontario \citep{CheminfoServices, AlgomaSteel, Stelco, PFlows_Ontario} and the imports and exports of these materials \citep{WorldIntegratedTradeSolution, InterprovincialImportsExports}.
+The steel industry is the first non-food sector in terms of phosphorus use. The main phosphorus inflows of steel manufacturing are associated with the use of iron ore, coal, and coke, while the
+%main outflow of phosphorus is within slag, which remove most of the impurities from steel, including phosphorus.
+main outflow of phosphorus is within slag, a by-product of steelmaking. During steelmaking, most of the impurities, including phosphorus separate into the slag phase.
+It must be noted that, although some minor amounts of phosphorus can be desired in steel for making anti-corrosion surface coatings, it is largely considered an impurity in the steel manufacturing process. Phosphorus in these flows is estimated multiplying their average phosphorus content (0.06\% P in iron ore, 0.05\% P for coal, 0.4\% P in slag, and 0.01\% in steel) \citep{yokoyama2007separation} by the steel production capacity of the facilities located in Ontario \citep{CheminfoServices, AlgomaSteel, Stelco, PFlows_Ontario} and the imports and exports of these materials \citep{WorldIntegratedTradeSolution, InterprovincialImportsExports}. The P in slag is estimated using component balancing.
 
-Phosphorus flows in Ontario's forestry industry includes wood harvesting, wood products manufacturing, as well as the production of pulp and paper. The estimation of these phosphorus flows are the result of multiplying the production data of wood, wood products, pulp and paper, and their retrospectives imports, exports, and waste streams \citep{CanadianForestServiceStatistics, InterprovincialImportsExports}, by the average phosphorus content, which is assumed to be 0.01\% for wood \citep{sardans2013tree} and 0.005\% for pulp and paper products.
+Phosphorus flows in Ontario's forestry industry includes wood harvesting, wood products manufacturing, as well as the production of pulp and paper. The estimation of these phosphorus flows are the result of multiplying the production data of wood, wood products, pulp and paper, and their respective imports, exports, and waste streams \citep{CanadianForestServiceStatistics, InterprovincialImportsExports}, by their average phosphorus content.
+%which is assumed to be 0.01\% for wood \citep{sardans2013tree} and 0.005\% for pulp and paper products.
+The average phosphorus content used for wood is 0.01\% \citep{sardans2013tree} and 0.005\% is estimated for pulp and paper products, using component balancing.
 
-The general chemical facilities located in Ontario report 350 t/year of phosphorus as waste \citep{PFlows_Ontario}, in addition of imports and exports of chemical products. However, there exist a significant fraction of phosphorus used in the industrial sector that cannot be tracked due to the lack of data. Regarding other industrial activities which could involve the use of phosphorus, the local production of phosphorus is assumed to be negligible since phosphorus is not mined or refined in Ontario, and the synthetic phosphorus fertilizer imports are accounted in the agricultural section.
+%The general chemical facilities located in Ontario report 350 t/year of phosphorus as waste \citep{PFlows_Ontario}, in addition of imports and exports of chemical products. 
+The local production of phosphorus is assumed to be negligible since phosphorus is not mined or refined in Ontario. Synthetic phosphorus fertilizer and phosphorus chemical imports are estimated similar to food imports.  The phosphorus fertilizer imports are accounted for in the agricultural section. Chemical facilities located in Ontario report 350 t/year of phosphorus as waste \citep{PFlows_Ontario}.
+However,
+%there exist a significant fraction of phosphorus used in the industrial sector that cannot be tracked due to the lack of data.
+a significant fraction of phosphorus used in the industrial sector cannot be tracked due to the lack of data.
+%Regarding other industrial activities which could involve the use of phosphorus, the local production of phosphorus is assumed to be negligible since phosphorus is not mined or refined in Ontario, and the synthetic phosphorus fertilizer imports are accounted in the agricultural section.
 
 %{\color{red}Ask sidney what to do with food industry, and pet feed. My approach is to merge all of them as it is currently in the figure, but confirm with her}
 
