--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -564,7 +564,7 @@ The wide difference of costs for the recovery of phosphorus from different flows
 
 
 \section{Acknowledgments}
-The Government of Canada through the Department of Environment and Climate Change, provided financial support to Pollution Probe to perform the study of P flows through Ontario’s economy in collaboration with Canadian academic experts on P and nutrient reuse and recovery and their teams under the Mapping Phosphorus Flows in the Ontario Economy project. This work further builds on findings from the Mapping Phosphorus Flows in the Ontario Economy project exploring the role for nutrient recovery and reuse technologies and solutions. Céline Vaneeckhaute holds the Canada Research Chair in Resource Recovery and Bioproducts Engineering. Céline Vaneeckhaute is financed by the Natural Science and Engineering Research Council of Canada through the award of an NSERC Discovery Grant (RGPIN-2017-04838).
+The Government of Canada through the Department of Environment and Climate Change provided financial support to Pollution Probe to perform the study of P flows through Ontario’s economy in collaboration with Canadian academic experts on P and nutrient reuse and recovery and their teams as part of the Mapping Phosphorus Flows in the Ontario Economy project. This work further builds on findings from the Mapping Phosphorus Flows in the Ontario Economy project in exploring the role for nutrient recovery and reuse technologies and solutions. Céline Vaneeckhaute holds the Canada Research Chair in Resource Recovery and Bioproducts Engineering. Céline Vaneeckhaute is financed by the Natural Science and Engineering Research Council of Canada through the award of an NSERC Discovery Grant (RGPIN-2017-04838).
 
 %\section{Livestock sector}
 %Phosphorus flows in the livestock sector can be defined taking the animal as reference, i,e., P inputs in the form of animal feeding, and P outputs, which include manure, milk, eggs, meat, and carcasses, as shown in Fig. \ref{fig:LivestockPFlows}.
